# halo2-multisig

./: .gitignore  Cargo.toml  OLDCargo.toml  README.md  rust-toolchain  rustfmt.toml
app/: craco.config.js  package-lock.json  package.json  proposeSignMsg.js
app/public/: index.html
app/src/: app.js  button.js  connect-button.js  dots.js  footer.js  gen.js  header.js  home.js  index.css  index.js  menu.js  metamask.js  modal.js  redux.js  sign.js  util.js
contracts/: verifier.sol
scripts/: DeploySafe.sol  eth_getProof.sh  run_anvil.sh
server/: main.js
src/: .storage.rs  .types.rs  aggregation.rs  circuit.rs  constants.rs  lib.rs  main.rs  mpt.rs  ref.rs  subquery_aggregation.rs  test.rs  types.rs  utils.rs
