[package]
name = "halo2-scaffold"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11"
lazy_static = "1.4.0"
# serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
serde_with = { version = "3.3", features = ["base64"] }
bincode = { version = "1.3.3" }
# misc
log = "0.4"
env_logger = "0.10"
getset = "0.1.2"
ark-std = { version = "0.3.0", features = ["print-trace"], optional = true }
anyhow = "1.0"
downcast-rs = "1.2.0"
hex = "0.4.3"
byteorder = { version = "1.4.3" }
rand = "0.8"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }

clap = { version = "=4.4.7", features = ["derive"], optional = true }
clap-num = "=1.0.2"

tiny-keccak = { version = "2.0.2", features = ["keccak"] }

# halo2
# halo2, features turned on by axiom-eth
# axiom-eth = { tag = "v2.0.17", git = "https://github.com/axiom-crypto/axiom-eth.git", default-features = false, features = ["providers", "aggregation", "evm"] }
# axiom-codec = { tag = "v2.0.17", git = "https://github.com/axiom-crypto/axiom-eth.git", default-features = false }
# axiom-query = { tag = "v2.0.17", git = "https://github.com/axiom-crypto/axiom-eth.git", default-features = false  }

# halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02" }

# halo2-base = { git = "https://github.com/shreyas-londhe/halo2-lib.git", branch = "feat/secp256k1-hash2curve-poseidon", default-features = false, features = ["halo2-axiom", "test-utils"] }
# halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib.git", tag = "v0.4.1-git", default-features = false, features = ["halo2-axiom", "test-utils"] }
# halo2-ecc = { git = "https://github.com/shreyas-londhe/halo2-lib.git", branch = "feat/secp256k1-hash2curve-poseidon", default-features = false, features = ["halo2-axiom"] }
# snark-verifier-sdk = { git = "https://github.com/shreyas-londhe/snark-verifier.git", optional = true }
axiom-eth = { tag = "v2.0.17", git = "https://github.com/axiom-crypto/axiom-eth.git", default-features = false, features = ["halo2-axiom", "providers", "aggregation"] }
axiom-query = { tag = "v2.0.17", git = "https://github.com/axiom-crypto/axiom-eth.git", default-features = false, features = ["keygen"]  }
axiom-codec = { tag = "v2.0.17", git = "https://github.com/axiom-crypto/axiom-eth.git", default-features = false  }

# crypto
rlp = "0.5.2"
ethers-core = { version = "=2.0.14", features = ["optimism"] }
ethers-providers = { version = "2.0.14" }
# mpt implementation
hasher = { version = "=0.1", features = ["hash-keccak"] }
cita_trie = "=5.0.0"

# keygen
enum_dispatch = { version = "0.3.12", optional = true }
serde_yaml = { version = "0.9.16", optional = true }

# Axiom's helper API with basic functions
# halo2-base = { version = "=0.4.1", default-features = false, features = ["test-utils"] } 
# halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib.git", tag = "v0.4.1-git", default-features = false, features = ["test-utils"] } 
# halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "community-edition" }
# snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier.git", branch = "community-edition" }

[dev-dependencies]
hex = "0.4.3"
ark-std = { version = "0.3.0", features = ["print-trace"] }
log = "0.4"
test-log = "0.2.11"
test-case = "3.1.0"
proptest = "1.1.0"
rand_chacha = "0.3.1"
tokio = { version = "1.33", features = ["macros"] }
reqwest = { version = "0.11", features = ["json"] }
# generating circuit inputs from blockchain
# ethers-providers = { version = "2.0.14" }
futures = { version = "0.3" }
blake3 = { version = "=1.5" }

anyhow = "1.0.81"
const-hex = "1.11.1"

# halo2-scaffold = { branch = "feat/0.3.0", git = "https://github.com/axiom-crypto/halo2-scaffold.git" }
# halo2-scaffold = { path = "../halo2-scaffold" }



[features]
default = ["halo2-axiom", "jemallocator", "display", "keygen"]
display = ["axiom-eth/display", "dep:ark-std"]
asm = ["axiom-eth/asm"]
revm = ["axiom-eth/revm"]
# halo2-pse = ["axiom-eth/halo2-pse"]
halo2-axiom = ["axiom-eth/halo2-axiom"]
jemallocator = ["axiom-eth/jemallocator"]
keygen = ["axiom-eth/keygen", "dep:enum_dispatch", "dep:clap", "dep:serde_yaml"]

# scripts = ["snark-verifier-sdk"]



# Dev / testing mode. We make opt-level = 3 to improve proving times (otherwise it is really slow)
[profile.dev]
opt-level = 3
debug = 1 # change to 0 or 2 for more or less debug info
overflow-checks = true # default
incremental = true # default

# Local "release" mode, more optimized than dev but faster to compile than release
[profile.local]
inherits = "dev"
opt-level = 3
# Set this to 1 or 2 to get more useful backtraces
debug = 1
debug-assertions = false
panic = 'unwind'
# better recompile times
incremental = true
lto = "thin"
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = "fat"
panic = "abort"
incremental = false